dist/manifests/borg-manifests/fluent-bit-centralized/5fluent-bit-centralized.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fluent-bit-centralized
  namespace: kube-system
  labels:
    k8s-app: fluent-bit-centralized
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 3

  # selector:
  #  matchLabels:
  template:
    metadata:
      labels:
        k8s-app: fluent-bit-centralized
        version: v1
        kubernetes.io/cluster-service: "true"

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2020"
        prometheus.io/path: /api/v1/metrics/prometheus
        
    spec:
      serviceAccountName: fluent-bit-centralized
      containers:
      - name: fluent-bit-centralized
        image: fluent/fluent-bit:1.0.5
        # command:

        volumeMounts:
        - name: logging-volume # The volume where logs will be delivered by the Docker logging driver
          mountPath: /logging-volume
        # The volume where Fluent Bit stores persistent data (position databases for tracking ingested files)
        - name: fluent-data
          mountPath: /var/fluent-bit
        # The Fluent Bit config file to use
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc
        

        resources:
          limits:
            cpu: ".2"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "10Mi"
          

        ports:
        - containerPort: 2020
          name: http-metrics
        - containerPort: 5140
          name: syslog
          protocol: UDP

      volumes:
      - name: logging-volume
        emptyDir: {}
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-centralized-config-0-3-0
      - name: fluent-data
        emptyDir: {}
      

      hostNetwork: True

      hostPID: True

      nodeSelector:
        beta.kubernetes.io/os: linux

      # securityContext:





#      hostNetwork: true
#      hostPID: true
#      nodeSelector:
#        beta.kubernetes.io/os: linux
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 65534
